[package]
name = "crypto-cli"
version = "0.1.0"
authors = ["Joinemm <joonas@rautiola.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features=  ["json"] }
serde = "1.0.125"
tokio = { version = "1.5.0", features = ["full"] }
